Add access to recent tasks

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -30,6 +30,7 @@ DPI; Замена ресурсов; Язык; Полный экран;
 \n- отключение звука уведомлений (требуется перезагрузка)
 \n- держать в памяти (требуется перезагрузка)
 \n- удаление приложения из недавних (требуется перезагрузка)
+\n- доступ к недавним задачам (требуется перезагрузка)
 \n- изменение прав (требуется двойная перезагрузка)
 \n- активация старой кнопки меню (не доступно на ОС 10.0+)
 \n- приоритет уведомлений (не доступно на ОС 8.0+)
@@ -88,6 +89,7 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="settings_notifpriority">Приоритет уведомлений</string>
     <string name="settings_mute">Без звука</string>
     <string name="settings_legacy_menu">Старая кнопка меню</string>
+    <string name="settings_recent_tasks">Доступ к недавним задачам</string>
     <string name="settings_permissions">Права</string>
     <string name="settings_recents_mode">Показ. в недавних</string>
 
