--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -37,10 +37,8 @@ DPI; Замена ресурсов; Язык; Полный экран;
 \n- отключение увеличенных уведомлений (не доступно на ОС 6.0+)</string>
     <string name="app_version">Версия: %s</string>
     <string name="app_translation">Перевод: %s</string>
-    <string name="app_notactive_warning">Примечание: хотя панели конфигурации могут быть использованы
-        как есть, они могут влиять на приложения, только если установлен Xposed framework и модуль активирован!</string>
-    <string name="app_min_api_warning_message">Xposed не активирован или не соответствует минимальной версии.
-\nМинимальная версия: <a href="https://github.com/ElderDrivers/EdXposed/releases">0.5.1.4</a></string>
+    <string name="app_framework_warning_message">Модуль не включён! Убедитесь что Xposed framework установлен и модуль включён в Xposed installer после чего перезагрузите устройство.</string>
+    <string name="app_selinux_warning_message">Для работы модуля требуется permissive SELinux или EdXposed Framework минимальной версии <a href="https://github.com/ElderDrivers/EdXposed/releases">0.5.1.3</a>.</string>
 
 
     <!-- main menu -->
