--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,7 +11,7 @@ DPI; Замена ресурсов; Язык; Полный экран;
     <string name="app_about"><a href="https://forum.xda-developers.com/xposed">Xposed</a> модуль от
  <a href="https://forum.xda-developers.com/member.php?u=4419114">rovo89</a> и <a href="https://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>.
  \nПоддержка модуля на Android 8.0+ от Blue cat <a href="https://forum.xda-developers.com/member.php?u=4798036">XDA</a> / <a href="http://4pda.ru/forum/index.php?showuser=2084748">4PDA</a>.
- \nВы можете открыть <a href="https://forum.xda-developers.com/xposed/modules/mod-app-settings-reborn-t4141339">этот топик</a> для вопросов и предложений (на английском).</string>
+ \nВы можете открыть <a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">этот топик</a> для вопросов и предложений (на английском).</string>
     <string name="app_description">Этот модуль позволяет изменить некоторые общие настройки без необходимости редактирования APK, для каждого приложения:
 \n- Контроль скриншота
 \n- плотность / dpi
