--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -11,7 +11,7 @@ Im Speicher behalten; keine Eingabeauswahl bei Vollbild; Orientierung; bleibende
     <string name="app_searchhint">Name oder Paket</string>
     <string name="app_about">Ein <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a>-Module von
  <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> und <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>.
- \nDu kannst <a href="http://forum.xda-developers.com/showthread.php?t=2437377">diesen Thread</a> für Fragen und Wünsche benutzen.</string>
+ \nDu kannst <a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">diesen Thread</a> für Fragen und Wünsche benutzen.</string>
     <string name="app_description">Diese Mod erlaubt bestimmte generische Einstellungen auf Pro-App-Basis, ohne die APKs zu editieren:
 \n- Auflösung / DPI
 \n- Schriftgröße
