--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -8,7 +8,7 @@
     <string name="app_searchhint">Név vagy csomag</string>
     <string name="app_about">Ez egy <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a> mudul
  <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> és <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a> től.
- \nHasználhatja <a href="http://forum.xda-developers.com/showthread.php?t=2437377">ezt a témát</a> ha kérdése, vagy javaslata van.</string>
+ \nHasználhatja <a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">ezt a témát</a> ha kérdése, vagy javaslata van.</string>
     <string name="app_description">"Ez a modul lehetővé teszi bizonyos általános konfigurációk megváltoztatását egy-egy alkalmazáson, anélkül, hogy szerkeszteni kellene az APK-t:
 \n- sűrűség / dpi
 \n- betűméret
