--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -13,7 +13,7 @@ DPI; 글씨 크기; 특정 리소스만 사용; 언어;
     <string name="app_searchhint">이름 혹은 패키지</string>
     <string name="app_about">이 어플리케이션은 <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a> 모듈 중 하나입니다.
  개발자 : <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a>와 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>.
- \n<a href="http://forum.xda-developers.com/showthread.php?t=2437377">이 스레드</a>에서 질문과 의견을 나눌 수 있습니다.</string>
+ \n<a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">이 스레드</a>에서 질문과 의견을 나눌 수 있습니다.</string>
     <string name="app_description">APK 파일을 수정하지 않고 앱마다 각각 다른 설정을 적용시켜줍니다. :
 \n- 화면 밀도 / DPI
 \n- 글씨 크기
