--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -11,7 +11,7 @@ Permanecer na memória; No Fullscreen IME; Orientação; Notificações persiste
     <string name="app_searchhint">nome ou pacote</string>
     <string name="app_about">Um módulo <a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a> por
  <a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> e <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>.
- \nVocê pode usar <a href="http://forum.xda-developers.com/showthread.php?t=2437377">este tópico</a> para questões ou sugestões.</string>
+ \nVocê pode usar <a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">este tópico</a> para questões ou sugestões.</string>
     <string name="app_description">Este mod permite que certas configurações genéricas sejam mudadas individualmente por app, sem a necessidade de editar APKs:
 \n- densidade / dpi
 \n- escala de fonte
