--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -10,7 +10,7 @@ Bellekte tutma; Yönlendirme; İzinleri iptal etme; &#8230;</string>
     <string name="app_searchhint">ad veya paket</string>
     <string name="app_about"><a href="http://forum.xda-developers.com/showthread.php?t=1574401">rovo89</a> ve <a href="http://forum.xda-developers.com/member.php?u=4419114">Tungstwenty</a>\'den bir <a href="http://forum.xda-developers.com/member.php?u=4322181">Xposed</a> modülü.
  \nBlue cat <a href="https://forum.xda-developers.com/member.php?u=4798036">XDA</a> / <a href="http://4pda.ru/forum/index.php?showuser=2084748">4PDA</a> tarafından Android 8.0+ modül desteği.
- \nSorular veya öneriler için <a href="https://forum.xda-developers.com/xposed/modules/mod-app-settings-reborn-t4141339">bu konuyu</a> kullanabilirsiniz.</string>
+ \nSorular veya öneriler için <a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">bu konuyu</a> kullanabilirsiniz.</string>
     <string name="app_description">Bu mod, APK\'ları düzenlemeye gerek kalmadan, belirli genel yapılandırmaların uygulama bazında değiştirilmesini sağlar:
 \n- Ekran görüntüsü kontrolü
 \n- yoğunluk / dpi
