--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -10,7 +10,7 @@
     <string name="app_loading">載入已安裝程式中....</string>
     <string name="app_searchhint">程式名稱</string>
     <string name="app_about">本<a href="http://forum.xda-developers.com/showthread.php?t=1574401">Xposed</a>模組由<a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a>及<a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>設計纂寫，
-\n如有任何建議或問題請洽<a href="http://forum.xda-developers.com/showthread.php?t=2437377">本討論串</a>。
+\n如有任何建議或問題請洽<a href="https://forum.xda-developers.com/t/mod-xposed-app-settings-reborn.4141339">本討論串</a>。
     </string>
 
     <string name="app_description">本模組可針對每個程式設定環境變數而不需自行修改APK檔；可修改功能包括：
