--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,9 +38,10 @@ Resident in memory; Orientation; Revoke Permissions; &#8230;</string>
     <string name="app_name">App Settings Reborn</string>
     <string name="app_version">Version: %s</string>
     <string name="app_translation">Translator: %s</string>
-    <string name="app_framework_warning_title">Xposed Framework</string>
-    <string name="app_framework_warning_message">The module is not active! Make sure Xposed framework is installed and module enabled on Xposed installer then reboot device.</string>
-    <string name="app_selinux_warning_message">The module requires permissive SELinux or EdXposed Framework minimum version <a href="https://github.com/ElderDrivers/EdXposed/releases">0.5.1.3</a></string>
+    <string name="app_framework_warning_title">The module is not active!</string>
+    <string name="app_framework_warning_message">Make sure EdXposed/LSPosed framework is installed and module enabled on EdXposed/LSPosed manager then reboot device.</string>
+    <string name="app_selinux_warning_message">The module requires permissive SELinux or EdXposed Framework minimum version<a href="https://github.com/ElderDrivers/EdXposed/releases">0.5.1.3</a>.
+        Any version of <a href="https://github.com/LSPosed/LSPosed/releases">LSposed</a> will work as well.</string>
 
 
     <!-- main menu -->
