Update about dialog

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -23,6 +23,8 @@ DPI; Замена ресурсов; Язык; Полный экран;
 \n- удержание экрана
 \n- удержание приложения поверх локскрина
 \n- отключение клавиатуры в полном экране
+\n- Всегда LTR
+\n- Авто скрытие полного экрана
 \n- форсирование ориентации (портрет/ландшафт/авто)
 \n- отключение звука (большинство приложений)
 \n- настойчивые уведомления (повтор звука / требуется перезагрузка)
